hard-gists/446bcbe699d4fb54972f/run.log
=== Docker Run Log for 446bcbe699d4fb54972f ===
Started at: Mi 29. Okt 14:40:02 CET 2025

[2025-10-29 14:40:03] START: Running container for 446bcbe699d4fb54972f
[2025-10-29 14:40:03] SUCCESS: Container d7356fa9893c22e302b7dbc8ebd29653757cb3a71b05de977621632dcba916fd started for 446bcbe699d4fb54972f
=== Container logs for 446bcbe699d4fb54972f ===
  File "/snippet.py", line 68
    print self.address, 'connected'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 446bcbe699d4fb54972f ===
[2025-10-29 14:40:05] INFO: Container d7356fa9893c22e302b7dbc8ebd29653757cb3a71b05de977621632dcba916fd has stopped
